--- a/package.json
+++ b/package.json
@@ -1,31 +1,323 @@
 {
   "name": "wak",
   "version": "1.0.0",
-  "description": "bot wa",
   "main": "index.js",
   "directories": {
     "lib": "lib"
   },
+  "dependencies": {
+    "abort-controller": "^3.0.0",
+    "accepts": "^1.3.8",
+    "acorn": "^8.14.1",
+    "acorn-jsx": "^5.3.2",
+    "ajv": "^6.12.6",
+    "ansi-regex": "^6.1.0",
+    "ansi-styles": "^4.3.0",
+    "any-base": "^1.1.0",
+    "argparse": "^2.0.1",
+    "array-flatten": "^1.1.1",
+    "async": "^3.2.5",
+    "async-mutex": "^0.5.0",
+    "asynckit": "^0.4.0",
+    "atomic-sleep": "^1.0.0",
+    "awesome-phonenumber": "^7.5.0",
+    "axios": "^0.24.0",
+    "balanced-match": "^1.0.2",
+    "base64-js": "^1.5.1",
+    "bcryptjs": "^3.0.2",
+    "bmp-js": "^0.1.0",
+    "body-parser": "^1.20.2",
+    "brace-expansion": "^1.1.11",
+    "braces": "^3.0.3",
+    "bson": "^6.7.0",
+    "buffer": "^6.0.3",
+    "buffer-equal": "^0.0.1",
+    "bytes": "^3.1.2",
+    "cacheable": "^1.9.0",
+    "call-bind": "^1.0.7",
+    "call-bind-apply-helpers": "^1.0.2",
+    "callsites": "^3.1.0",
+    "centra": "^2.7.0",
+    "chalk": "^4.1.2",
+    "cliui": "^9.0.1",
+    "clone": "^2.1.2",
+    "color-convert": "^2.0.1",
+    "color-name": "^1.1.4",
+    "combined-stream": "^1.0.8",
+    "concat-map": "^0.0.1",
+    "content-disposition": "^0.5.4",
+    "content-type": "^1.0.5",
+    "cookie": "^0.6.0",
+    "cookie-signature": "^1.0.6",
+    "cross-spawn": "^7.0.6",
+    "curve25519-js": "^0.0.4",
+    "data-uri-to-buffer": "^4.0.1",
+    "debug": "^2.6.9",
+    "deep-is": "^0.1.4",
+    "define-data-property": "^1.1.4",
+    "delayed-stream": "^1.0.0",
+    "depd": "^2.0.0",
+    "destroy": "^1.2.0",
+    "dom-walk": "^0.1.2",
+    "dunder-proto": "^1.0.1",
+    "duplexify": "^4.1.3",
+    "ee-first": "^1.1.1",
+    "ejs": "^3.1.10",
+    "emoji-regex": "^10.4.0",
+    "encodeurl": "^1.0.2",
+    "end-of-stream": "^1.4.4",
+    "es-define-property": "^1.0.0",
+    "es-errors": "^1.3.0",
+    "es-object-atoms": "^1.1.1",
+    "es-set-tostringtag": "^2.1.0",
+    "escalade": "^3.2.0",
+    "escape-html": "^1.0.3",
+    "escape-string-regexp": "^4.0.0",
+    "eslint": "^9.28.0",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
+    "eslint-scope": "^8.3.0",
+    "eslint-visitor-keys": "^3.4.3",
+    "espree": "^10.3.0",
+    "esquery": "^1.6.0",
+    "esrecurse": "^4.3.0",
+    "estraverse": "^5.3.0",
+    "esutils": "^2.0.3",
+    "etag": "^1.8.1",
+    "event-target-shim": "^5.0.1",
+    "events": "^3.3.0",
+    "exif-parser": "^0.1.12",
+    "express": "^4.19.2",
+    "express-session": "^1.18.1",
+    "fast-deep-equal": "^3.1.3",
+    "fast-glob": "^3.3.3",
+    "fast-json-stable-stringify": "^2.1.0",
+    "fast-levenshtein": "^2.0.6",
+    "fast-redact": "^3.5.0",
+    "fastq": "^1.19.1",
+    "fetch-blob": "^3.2.0",
+    "file-entry-cache": "^8.0.0",
+    "file-type": "^16.5.4",
+    "filelist": "^1.0.4",
+    "fill-range": "^7.1.1",
+    "finalhandler": "^1.2.0",
+    "find-up": "^5.0.0",
+    "flat-cache": "^4.0.1",
+    "flatted": "^3.3.3",
+    "fluent-ffmpeg": "^2.1.3",
+    "follow-redirects": "^1.15.9",
+    "form-data": "^4.0.2",
+    "formdata-polyfill": "^4.0.10",
+    "forwarded": "^0.2.0",
+    "fresh": "^0.5.2",
+    "function-bind": "^1.1.2",
+    "futoin-hkdf": "^1.5.3",
+    "get-caller-file": "^2.0.5",
+    "get-east-asian-width": "^1.3.0",
+    "get-intrinsic": "^1.2.4",
+    "get-proto": "^1.0.1",
+    "gifwrap": "^0.9.4",
+    "glob-parent": "^6.0.2",
+    "global": "^4.4.0",
+    "globals": "^14.0.0",
+    "gopd": "^1.0.1",
+    "graphemer": "^1.4.0",
+    "has-flag": "^4.0.0",
+    "has-property-descriptors": "^1.0.2",
+    "has-proto": "^1.0.3",
+    "has-symbols": "^1.0.3",
+    "has-tostringtag": "^1.0.2",
+    "hasown": "^2.0.2",
+    "hookified": "^1.9.1",
+    "http-errors": "^2.0.0",
+    "human-readable": "^0.2.1",
+    "iconv-lite": "^0.4.24",
+    "idb-keyval": "^6.2.2",
+    "ieee754": "^1.2.1",
+    "ignore": "^7.0.5",
+    "image-q": "^4.0.0",
+    "import-fresh": "^3.3.1",
+    "imurmurhash": "^0.1.4",
+    "inherits": "^2.0.4",
+    "ipaddr.js": "^1.9.1",
+    "is-extglob": "^2.1.1",
+    "is-function": "^1.0.2",
+    "is-glob": "^4.0.3",
+    "is-number": "^7.0.0",
+    "is-url": "^1.2.4",
+    "isexe": "^2.0.0",
+    "jake": "^10.9.1",
+    "jimp": "^0.16.13",
+    "jpeg-js": "^0.4.4",
+    "js-yaml": "^4.1.0",
+    "json-buffer": "^3.0.1",
+    "json-schema-traverse": "^0.4.1",
+    "json-stable-stringify-without-jsonify": "^1.0.1",
+    "kareem": "^2.6.3",
+    "keyv": "^5.3.3",
+    "levn": "^0.4.1",
+    "libsignal": "^2.0.1",
+    "load-bmfont": "^1.4.2",
+    "locate-path": "^6.0.0",
+    "lodash": "^4.17.21",
+    "lodash.merge": "^4.6.2",
+    "long": "^4.0.0",
+    "math-intrinsics": "^1.1.0",
+    "media-typer": "^0.3.0",
+    "memory-pager": "^1.5.0",
+    "merge-descriptors": "^1.0.1",
+    "merge2": "^1.4.1",
+    "methods": "^1.1.2",
+    "micromatch": "^4.0.8",
+    "mime": "^1.6.0",
+    "mime-db": "^1.52.0",
+    "mime-types": "^2.1.35",
+    "min-document": "^2.19.0",
+    "minimatch": "^3.1.2",
+    "minimist": "^1.2.8",
+    "mkdirp": "^0.5.6",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.6.0",
+    "mongodb": "^6.6.2",
+    "mongodb-connection-string-url": "^3.0.1",
+    "mongoose": "^8.4.0",
+    "mpath": "^0.9.0",
+    "mquery": "^5.0.0",
+    "ms": "^2.0.0",
+    "music-metadata": "^7.14.0",
+    "natural-compare": "^1.4.0",
+    "negotiator": "^0.6.3",
+    "node-cache": "^5.1.2",
+    "node-domexception": "^1.0.0",
+    "node-fetch": "^3.3.2",
+    "node-webpmux": "^3.2.1",
+    "object-inspect": "^1.13.1",
+    "omggif": "^1.0.10",
+    "on-exit-leak-free": "^2.1.2",
+    "on-finished": "^2.4.1",
+    "on-headers": "^1.0.2",
+    "once": "^1.4.0",
+    "opencollective-postinstall": "^2.0.3",
+    "optionator": "^0.9.4",
+    "p-limit": "^3.1.0",
+    "p-locate": "^5.0.0",
+    "pako": "^1.0.11",
+    "parent-module": "^1.0.1",
+    "parse-bmfont-ascii": "^1.0.6",
+    "parse-bmfont-binary": "^1.0.6",
+    "parse-bmfont-xml": "^1.1.6",
+    "parse-headers": "^2.0.6",
+    "parseurl": "^1.3.3",
+    "path-exists": "^4.0.0",
+    "path-key": "^3.1.1",
+    "path-to-regexp": "^0.1.7",
+    "peek-readable": "^4.1.0",
+    "phin": "^2.9.3",
+    "picomatch": "^2.3.1",
+    "pino": "^9.7.0",
+    "pino-abstract-transport": "^2.0.0",
+    "pino-std-serializers": "^7.0.0",
+    "pixelmatch": "^4.0.2",
+    "pngjs": "^3.4.0",
+    "prelude-ls": "^1.2.1",
+    "process": "^0.11.10",
+    "process-warning": "^5.0.0",
+    "protobufjs": "^6.11.4",
+    "proxy-addr": "^2.0.7",
+    "proxy-from-env": "^1.1.0",
+    "punycode": "^2.3.1",
+    "qs": "^6.11.0",
+    "queue-microtask": "^1.2.3",
+    "quick-format-unescaped": "^4.0.4",
+    "random-bytes": "^1.0.0",
+    "range-parser": "^1.2.1",
+    "raw-body": "^2.5.2",
+    "readable-stream": "^4.7.0",
+    "readable-web-to-node-stream": "^3.0.4",
+    "real-require": "^0.2.0",
+    "regenerator-runtime": "^0.13.11",
+    "resolve-from": "^4.0.0",
+    "reusify": "^1.1.0",
+    "run-parallel": "^1.2.0",
+    "safe-buffer": "^5.2.1",
+    "safe-stable-stringify": "^2.5.0",
+    "safer-buffer": "^2.1.2",
+    "sax": "^1.4.1",
+    "semver": "^7.7.2",
+    "send": "^0.18.0",
+    "serve-static": "^1.15.0",
+    "set-function-length": "^1.2.2",
+    "setprototypeof": "^1.2.0",
+    "shebang-command": "^2.0.0",
+    "shebang-regex": "^3.0.0",
+    "side-channel": "^1.0.6",
+    "sift": "^17.1.3",
+    "sonic-boom": "^4.2.0",
+    "sparse-bitfield": "^3.0.3",
+    "split2": "^4.2.0",
+    "statuses": "^2.0.1",
+    "steno": "^4.0.2",
+    "stream-shift": "^1.0.3",
+    "string-width": "^7.2.0",
+    "string_decoder": "^1.3.0",
+    "strip-ansi": "^7.1.0",
+    "strip-json-comments": "^3.1.1",
+    "strtok3": "^6.3.0",
+    "supports-color": "^7.2.0",
+    "tesseract.js": "^6.0.1",
+    "tesseract.js-core": "^6.0.0",
+    "thread-stream": "^3.1.0",
+    "timm": "^1.7.1",
+    "tinycolor2": "^1.6.0",
+    "to-regex-range": "^5.0.1",
+    "toidentifier": "^1.0.1",
+    "token-types": "^4.2.1",
+    "tr46": "^4.1.1",
+    "ts-api-utils": "^2.1.0",
+    "tslib": "^2.8.1",
+    "type-check": "^0.4.0",
+    "type-is": "^1.6.18",
+    "typescript": "^5.8.3",
+    "uid-safe": "^2.1.5",
+    "undici-types": "^6.21.0",
+    "unpipe": "^1.0.0",
+    "uri-js": "^4.4.1",
+    "utif": "^2.0.1",
+    "util-deprecate": "^1.0.2",
+    "utils-merge": "^1.0.1",
+    "vary": "^1.1.2",
+    "wasm-feature-detect": "^1.8.0",
+    "web-streams-polyfill": "^3.3.3",
+    "webidl-conversions": "^7.0.0",
+    "whatwg-url": "^13.0.0",
+    "which": "^1.3.1",
+    "word-wrap": "^1.2.5",
+    "wrap-ansi": "^9.0.0",
+    "wrappy": "^1.0.2",
+    "ws": "^8.18.2",
+    "xhr": "^2.6.0",
+    "xml-parse-from-string": "^1.0.1",
+    "xml2js": "^0.5.0",
+    "xmlbuilder": "^11.0.1",
+    "xtend": "^4.0.2",
+    "y18n": "^5.0.8",
+    "yargs": "^18.0.0",
+    "yargs-parser": "^22.0.0",
+    "yocto-queue": "^0.1.0",
+    "zlibjs": "^0.3.1"
+  },
+  "devDependencies": {},
   "scripts": {
-    "test": "npm run"
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ekimartiti/Hyper-bot.git"
   },
   "author": "eki",
   "license": "ISC",
-  "dependencies": {
-    "@adiwajshing/baileys": "^5.0.0",
-    "@whiskeysockets/baileys": "^6.7.18",
-    "awesome-phonenumber": "^7.5.0",
-    "chalk": "^4.1.2",
-    "fluent-ffmpeg": "^2.1.3",
-    "human-readable": "^0.2.1",
-    "jimp": "^0.16.13",
-    "moment-timezone": "^0.6.0",
-    "node-fetch": "^3.3.2",
-    "node-webpmux": "^3.2.1",
-    "pino": "^9.7.0",
-    "steno": "^4.0.2",
-    "tesseract.js": "^6.0.1",
-    "yargs": "github:yargs/yargs"
+  "bugs": {
+    "url": "https://github.com/ekimartiti/Hyper-bot/issues"
   },
-  "devDependencies": {}
+  "homepage": "https://github.com/ekimartiti/Hyper-bot#readme",
+  "description": ""
 }
