--- a/config.json
+++ b/config.json
@@ -1,2 +1,3 @@
-{ "mongoKey":"mongodb+srv://kleeladimin:balebale@ekidb.lczqgls.mongodb.net/?retryWrites=true&w=majority&appName=Ekidb"
+{ "mongoKey":"mongodb+srv://kleeladimin:balebale@ekidb.lczqgls.mongodb.net/?retryWrites=true&w=majority&appName=Ekidb",
+"telekey":"7593205400:AAEV_jRZJAGjrM1QvnpS85zFrjNpz_eDSDI"
 }
