--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "lib": "lib"
   },
   "dependencies": {
+    "@whiskeysockets/baileys": "^6.7.18",
     "abort-controller": "^3.0.0",
     "accepts": "^1.3.8",
     "acorn": "^8.14.1",
@@ -189,6 +190,7 @@
     "node-cache": "^5.1.2",
     "node-domexception": "^1.0.0",
     "node-fetch": "^3.3.2",
+    "node-telegram-bot-api": "^0.66.0",
     "node-webpmux": "^3.2.1",
     "object-inspect": "^1.13.1",
     "omggif": "^1.0.10",
@@ -257,8 +259,8 @@
     "statuses": "^2.0.1",
     "steno": "^4.0.2",
     "stream-shift": "^1.0.3",
-    "string-width": "^7.2.0",
     "string_decoder": "^1.3.0",
+    "string-width": "^7.2.0",
     "strip-ansi": "^7.1.0",
     "strip-json-comments": "^3.1.1",
     "strtok3": "^6.3.0",
@@ -305,7 +307,6 @@
     "yocto-queue": "^0.1.0",
     "zlibjs": "^0.3.1"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -319,5 +320,6 @@
     "url": "https://github.com/ekimartiti/Hyper-bot/issues"
   },
   "homepage": "https://github.com/ekimartiti/Hyper-bot#readme",
+  "devDependencies": {},
   "description": ""
 }
