--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "cookie": "^0.6.0",
     "cookie-signature": "^1.0.6",
     "cross-spawn": "^7.0.6",
+    "crypto": "^1.0.1",
     "curve25519-js": "^0.0.4",
     "data-uri-to-buffer": "^4.0.1",
     "debug": "^2.6.9",
@@ -227,6 +228,7 @@
     "proxy-addr": "^2.0.7",
     "proxy-from-env": "^1.1.0",
     "punycode": "^2.3.1",
+    "qrcode": "^1.5.4",
     "qs": "^6.11.0",
     "queue-microtask": "^1.2.3",
     "quick-format-unescaped": "^4.0.4",
